log
jue., 11 de may. de 2023 21:40:55: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
heap.c: In function 'createHeap':
heap.c:37:20: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
    heap->heapArray = (heapElem **) calloc(3, sizeof(heapElem *));
                    ^
cc1.exe: all warnings being treated as errors
Compilation failed
1631ee6
jue., 11 de may. de 2023 21:41:07: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
020369b
jue., 11 de may. de 2023 23:04:44: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
c0c1285
